--- a/.github/workflows/png-optim.yml
+++ b/.github/workflows/png-optim.yml
@@ -17,8 +17,9 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: step-security/harden-runner@2e205a28d0e1da00c5f53b161f4067b052c61f34 # v1.5.0
+      - uses: step-security/harden-runner@eb238b55efaa70779f274895e782ed17c84f2895 # v2.6.1
         with:
+          disable-sudo: true
           egress-policy: audit # TODO: change to 'egress-policy: block' after couple of runs
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
       # https://github.com/actions/cache/blob/main/examples.md#rust---cargo
