Added cloudflare scripts

--- a/package.json
+++ b/package.json
@@ -1,18 +1,27 @@
 {
 	"type": "module",
 	"scripts": {
-		"build": "qwik build",
+		"build": "npm ci --include dev && qwik build",
 		"build.client": "vite build",
-		"build.preview": "vite build --ssr src/entry.preview.tsx",
+		"build.client:watch": "npm run build.client -- --watch",
+		"build.preview": "vite build --ssr src/entry.cloudflare-pages.tsx",
+		"build.preview:watch": "npm run build.preview -- --watch",
+		"build.server": "vite build -c adapters/cloudflare-pages/vite.config.ts",
+		"build.server:watch": "npm run build.server -- --watch",
 		"build.types": "tsc --incremental --noEmit",
-		"deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
+		"build.types:watch": "npm run build.types -- --watch",
+		"deploy": "wrangler pages publish ./dist",
 		"dev": "vite --mode ssr",
 		"dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
 		"fmt": "prettier --write .",
 		"fmt.check": "prettier --check .",
 		"lint": "eslint \"src/**/*.ts*\"",
 		"preview": "qwik build preview && vite preview --open",
-		"start": "vite --open --mode ssr",
+		"preview:lhci": "qwik build preview && vite preview --port 8080",
+		"clean": "npx -y rimraf@latest ./dist ./server ./tmp",
+		"start:clean": "npm run clean && qwik build && npm run start",
+		"start": "wrangler pages dev dist --live-reload true --local-protocol http --ip localhost --compatibility-flags=\"nodejs_compat\"",
+		"serve": "wrangler pages dev ./dist",
 		"qwik": "qwik"
 	},
 	"repository": {
