--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"eslint-plugin-qwik": "^1.4.0",
 		"prettier": "^3.2.4",
 		"typescript": "^5.3.3",
-		"vite-tsconfig-paths": "^4.3.1"
+		"vite-tsconfig-paths": "^4.3.1",
+		"wrangler": "^3.23.0"
 	}
 }
