Revert "Use https"
This reverts commit 8b24df4161e6e69f6afe11b14e79f5680ba48607.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"preview:lhci": "qwik build preview && vite preview --port 8080",
 		"clean": "npx -y rimraf@latest ./dist ./server ./tmp",
 		"start:clean": "npm run clean && qwik build && npm run start",
-		"start": "wrangler pages dev dist --live-reload true --local-protocol https --ip localhost --compatibility-flags=\"nodejs_compat\"",
+		"start": "wrangler pages dev dist --live-reload true --local-protocol http --ip localhost --compatibility-flags=\"nodejs_compat\"",
 		"serve": "wrangler pages dev ./dist",
 		"qwik": "qwik"
 	},
