--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
 			"name": "Launch Chrome",
 			"request": "launch",
 			"type": "chrome",
-			"url": "https://localhost:8788",
+			"url": "http://localhost:8788",
 			"webRoot": "${workspaceFolder}"
 		},
 		{
