--- a/package.json
+++ b/package.json
@@ -54,7 +54,10 @@
 		"autoprefixer": "^10.4.17",
 		"eslint": "^8.56.0",
 		"eslint-plugin-qwik": "^1.4.0",
+		"less": "^4.2.0",
 		"postcss": "^8.4.33",
+		"postcss-import": "^16.0.0",
+		"postcss-nesting": "^12.0.2",
 		"prettier": "^3.2.4",
 		"prettier-plugin-tailwindcss": "^0.5.11",
 		"tailwindcss": "^3.4.1",
