--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -43,6 +43,8 @@ updates:
           - 'autoprefixer'
           - 'flowbite'
           - 'less'
+          - '@fortawesome/*'
+          - 'qwik-fontawesome'
       cloudflare:
         patterns:
           - '@cloudflare/*'
