--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
 		"node": ">=18.0.0"
 	},
 	"dependencies": {
+		"@fortawesome/free-brands-svg-icons": "^6.5.1",
+		"@fortawesome/free-regular-svg-icons": "^6.5.1",
+		"@fortawesome/free-solid-svg-icons": "^6.5.1",
 		"flowbite": "^2.2.1"
 	},
 	"devDependencies": {
@@ -47,6 +50,7 @@
 		"@cloudflare/ai": "^1.0.47",
 		"@cloudflare/workers-types": "^4.20240117.0",
 		"@demosjarco/prettier-config": "^1.0.1",
+		"@fortawesome/fontawesome-svg-core": "^6.5.1",
 		"@rollup/plugin-node-resolve": "^15.2.3",
 		"@types/eslint": "^8.56.2",
 		"@typescript-eslint/eslint-plugin": "^6.19.0",
@@ -60,6 +64,7 @@
 		"postcss-nesting": "^12.0.2",
 		"prettier": "^3.2.4",
 		"prettier-plugin-tailwindcss": "^0.5.11",
+		"qwik-fontawesome": "^0.2.0",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5.3.3",
 		"vite-tsconfig-paths": "^4.3.1",
