Make working easier

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -27,48 +27,66 @@
 				"group": "compile"
 			}
 		},
+		// {
+		// 	"label": "build.client",
+		// 	"detail": "vite build --watch",
+		// 	"type": "npm",
+		// 	"script": "build.client:watch",
+		// 	"problemMatcher": {
+		// 		"owner": "vite",
+		// 		"fileLocation": ["relative", "${workspaceFolder}"],
+		// 		"pattern": {
+		// 			"regexp": "^built in \\d+ms\\.$",
+		// 			"file": 1
+		// 		},
+		// 		"background": {
+		// 			"activeOnStart": true,
+		// 			"beginsPattern": "^> build\\.preview",
+		// 			"endsPattern": "^built in \\d+ms\\.$"
+		// 		}
+		// 	},
+		// 	"isBackground": true,
+		// 	"presentation": {
+		// 		"group": "compile"
+		// 	}
+		// },
 		{
 			"label": "build.client",
-			"detail": "vite build --watch",
+			"detail": "vite build",
 			"type": "npm",
-			"script": "build.client:watch",
-			"problemMatcher": {
-				"owner": "vite",
-				"fileLocation": ["relative", "${workspaceFolder}"],
-				"pattern": {
-					"regexp": "^built in \\d+ms\\.$",
-					"file": 1
-				},
-				"background": {
-					"activeOnStart": true,
-					"beginsPattern": "^> build\\.preview",
-					"endsPattern": "^built in \\d+ms\\.$"
-				}
-			},
-			"isBackground": true,
+			"script": "build.client",
 			"presentation": {
 				"group": "compile"
 			}
 		},
+		// {
+		// 	"label": "build.server",
+		// 	"detail": "vite build -c adapters/cloudflare-pages/vite.config.ts --watch",
+		// 	"type": "npm",
+		// 	"script": "build.server:watch",
+		// 	"problemMatcher": {
+		// 		"owner": "vite",
+		// 		"fileLocation": ["relative", "${workspaceFolder}"],
+		// 		"pattern": {
+		// 			"regexp": "^built in \\d+ms\\.$",
+		// 			"file": 1
+		// 		},
+		// 		"background": {
+		// 			"activeOnStart": true,
+		// 			"beginsPattern": "^> build\\.server",
+		// 			"endsPattern": "^built in \\d+ms\\.$"
+		// 		}
+		// 	},
+		// 	"isBackground": true,
+		// 	"presentation": {
+		// 		"group": "compile"
+		// 	}
+		// },
 		{
 			"label": "build.server",
-			"detail": "vite build -c adapters/cloudflare-pages/vite.config.ts --watch",
+			"detail": "vite build -c adapters/cloudflare-pages/vite.config.ts",
 			"type": "npm",
-			"script": "build.server:watch",
-			"problemMatcher": {
-				"owner": "vite",
-				"fileLocation": ["relative", "${workspaceFolder}"],
-				"pattern": {
-					"regexp": "^built in \\d+ms\\.$",
-					"file": 1
-				},
-				"background": {
-					"activeOnStart": true,
-					"beginsPattern": "^> build\\.server",
-					"endsPattern": "^built in \\d+ms\\.$"
-				}
-			},
-			"isBackground": true,
+			"script": "build.server",
 			"presentation": {
 				"group": "compile"
 			}
