--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
 		"@fortawesome/free-brands-svg-icons": "^6.5.1",
 		"@fortawesome/free-regular-svg-icons": "^6.5.1",
 		"@fortawesome/free-solid-svg-icons": "^6.5.1",
-		"flowbite": "^2.2.1"
+		"flowbite": "^2.2.1",
+		"typechat": "^0.0.10"
 	},
 	"devDependencies": {
 		"@builder.io/qwik": "^1.4.0",
