--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
 	"scripts": {
+		"fmt": "prettier --write .",
+		"fmt.check": "prettier --check .",
 		"build:pages": "npm ci --include dev && npm -w pages run build"
 	},
 	"repository": {
