--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,6 @@
 			"fileMatch": ["**/devcontainer.json"],
 			"url": "https://raw.githubusercontent.com/devcontainers/spec/main/schemas/devContainer.schema.json"
 		}
-	]
+	],
+	"github-actions.workflows.pinned.workflows": [".github/workflows/publish-worker.yml"]
 }
