Update readme link

--- a/pages/package.json
+++ b/pages/package.json
@@ -35,7 +35,7 @@
 	"bugs": {
 		"url": "https://github.com/demosjarco/matt-ai/issues"
 	},
-	"homepage": "https://github.com/demosjarco/matt-ai#readme",
+	"homepage": "https://github.com/demosjarco/matt-ai/tree/production/pages#readme",
 	"engines": {
 		"node": ">=18.0.0"
 	},
