--- a/worker/package.json
+++ b/worker/package.json
@@ -15,5 +15,13 @@
 	"bugs": {
 		"url": "https://github.com/demosjarco/matt-ai/issues"
 	},
-	"homepage": "https://github.com/demosjarco/matt-ai#readme"
+	"homepage": "https://github.com/demosjarco/matt-ai#readme",
+	"dependencies": {
+		"@graphql-yoga/plugin-defer-stream": "^3.1.1",
+		"@graphql-yoga/plugin-graphql-sse": "^3.1.1",
+		"graphql": "^16.8.1",
+		"graphql-scalars": "^1.22.4",
+		"graphql-yoga": "^5.1.1",
+		"hono": "^3.12.7"
+	}
 }
