emit ai types correctly

--- a/worker/aiTypes/tsconfig.json
+++ b/worker/aiTypes/tsconfig.json
@@ -1,5 +1,11 @@
 {
 	"extends": "../tsconfig.json",
-	"compilerOptions": {},
+	"compilerOptions": {
+		"module": "NodeNext",
+		"declaration": true,
+		"emitDeclarationOnly": true,
+		"removeComments": true,
+		"noEmit": false,
+	},
 	"include": ["*.ts"],
 }
