--- a/.github/workflows/publish-worker.yml
+++ b/.github/workflows/publish-worker.yml
@@ -41,7 +41,8 @@ jobs:
           check-latest: true
           cache: 'npm'
       - run: npm ci --include-workspace-root --workspace worker
-      - run: npx tsc --project tsconfig.json
+      # For some reason tsc doesn't start looking in the folder, but 1 up
+      - run: npx tsc --project aiTypes/tsconfig.json
         working-directory: worker/aiTypes
       - run: echo "wrangler_version=$(npm ls wrangler --depth=0 --json | jq -r '.dependencies.wrangler.version')" >> $GITHUB_OUTPUT
         id: npm_wrangler_version
