--- a/.github/workflows/publish-worker.yml
+++ b/.github/workflows/publish-worker.yml
@@ -44,6 +44,7 @@ jobs:
       # For some reason tsc doesn't start looking in the folder, but 1 up
       - run: npx tsc --project aiTypes/tsconfig.json
         working-directory: worker/aiTypes
+      - run: npm -w worker run build
       - run: echo "wrangler_version=$(npm ls wrangler --depth=0 --json | jq -r '.dependencies.wrangler.version')" >> $GITHUB_OUTPUT
         id: npm_wrangler_version
       - uses: cloudflare/wrangler-action@7c01cc48d88a1f83b4716e0557c168854a9dcdb8 # v3.4.1
