--- a/worker/package.json
+++ b/worker/package.json
@@ -2,6 +2,7 @@
 	"name": "worker",
 	"type": "module",
 	"scripts": {
+		"build": "node --disallow-code-generation-from-strings --use-largepages=on --loader ts-node/esm aiTypes/convert.mts",
 		"start": "wrangler dev --local-protocol http --ip localhost --port 11853 --persist-to ../.wrangler/state"
 	},
 	"repository": {
@@ -23,5 +24,10 @@
 		"graphql-scalars": "^1.22.4",
 		"graphql-yoga": "^5.1.1",
 		"hono": "^3.12.7"
+	},
+	"devDependencies": {
+		"@swc/core": "^1.3.105",
+		"@types/node": "^20.11.6",
+		"ts-node": "^10.9.2"
 	}
 }
