--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -57,7 +57,7 @@
 	// Configure tool-specific properties.
 	"customizations": {
 		"vscode": {
-			"extensions": ["dbaeumer.vscode-eslint", "esbenp.prettier-vscode", "github.vscode-github-actions", "qwtel.sqlite-viewer", "unifiedjs.vscode-mdx", "github.codespaces", "redhat.vscode-yaml"],
+			"extensions": ["dbaeumer.vscode-eslint", "esbenp.prettier-vscode", "github.vscode-github-actions", "qwtel.sqlite-viewer", "unifiedjs.vscode-mdx", "redhat.vscode-yaml", "github.codespaces"],
 		},
 	},
 
