Add turnstile types

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -79,6 +79,7 @@ updates:
         patterns:
           - '@types/*'
           - '@cloudflare/workers-types'
+          - 'turnstile-types'
       code-management:
         patterns:
           - 'prettier'
