--- a/pages/package.json
+++ b/pages/package.json
@@ -63,6 +63,7 @@
 		"prettier-plugin-tailwindcss": "^0.5.11",
 		"qwik-fontawesome": "^0.2.0",
 		"tailwindcss": "^3.4.1",
+		"turnstile-types": "^1.2.0",
 		"vite-tsconfig-paths": "^4.3.1"
 	}
 }
