Revert "Move worker to https local dev"
This reverts commit 47dec3673a77c032922385a10c5ab72f1181136d.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -46,7 +46,7 @@
 			"elevateIfNeeded": true,
 			"label": "Workers",
 			"onAutoForward": "notify",
-			"protocol": "https",
+			"protocol": "http",
 		},
 	},
 
