--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
 	"name": "Node.js",
 	"build": {
 		// Path is relative to the devcontainer.json file.
-		"dockerfile": "Dockerfile",
+		"dockerfile": "Dockerfile"
 	},
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
@@ -16,21 +16,21 @@
 			"installOhMyZshConfig": false,
 			"upgradePackages": true,
 			"username": "node",
-			"nonFreePackages": true,
+			"nonFreePackages": true
 		},
 		"ghcr.io/devcontainers/features/git:1": {
 			"version": "latest",
-			"ppa": "false",
+			"ppa": "false"
 		},
 		"ghcr.io/devcontainers/features/github-cli:1": {
 			"version": "latest",
-			"installDirectlyFromGitHubRelease": true,
+			"installDirectlyFromGitHubRelease": true
 		},
 		"ghcr.io/devcontainers/features/node:1": {
 			"version": "none",
 			"nodeGypDependencies": false,
-			"nvmVersion": "latest",
-		},
+			"nvmVersion": "latest"
+		}
 	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
@@ -40,14 +40,14 @@
 			"elevateIfNeeded": true,
 			"label": "Pages",
 			"onAutoForward": "notify",
-			"protocol": "http",
+			"protocol": "http"
 		},
 		"11853": {
 			"elevateIfNeeded": true,
 			"label": "Workers",
 			"onAutoForward": "notify",
-			"protocol": "http",
-		},
+			"protocol": "http"
+		}
 	},
 
 	// https://containers.dev/implementors/spec/#parallel-exec
@@ -55,22 +55,22 @@
 	// "updateContentCommand": {},
 	"postCreateCommand": {
 		"fixMountPermissions": ["sudo", "chown", "node", "node_modules"],
-		"setupPackages": ["npm", "ci", "--include-workspace-root", "--workspaces"],
+		"setupPackages": ["npm", "ci", "--include-workspace-root", "--workspaces"]
 	},
 	"postStartCommand": {
-		"updateCode": "git fetch && git pull --ff-only || git status",
+		"updateCode": "git fetch && git pull --ff-only || git status"
 	},
 	// "postAttachCommand": {},
 
 	// Configure tool-specific properties.
 	"customizations": {
 		"vscode": {
-			"extensions": ["dbaeumer.vscode-eslint", "esbenp.prettier-vscode", "github.vscode-github-actions", "qwtel.sqlite-viewer", "unifiedjs.vscode-mdx", "redhat.vscode-yaml", "github.codespaces"],
-		},
+			"extensions": ["dbaeumer.vscode-eslint", "esbenp.prettier-vscode", "github.vscode-github-actions", "qwtel.sqlite-viewer", "unifiedjs.vscode-mdx", "redhat.vscode-yaml", "github.codespaces"]
+		}
 	},
 
 	"mounts": ["source=${localWorkspaceFolderBasename}-node_modules,target=${containerWorkspaceFolder}/node_modules,type=volume"],
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	"remoteUser": "node",
+	"remoteUser": "node"
 }
