--- a/worker/package.json
+++ b/worker/package.json
@@ -5,7 +5,7 @@
 		"build:types": "tsc --project aiTypes/tsconfig.json",
 		"build:types:watch": "npm run build:types -- --watch",
 		"build": "node --disallow-code-generation-from-strings --use-largepages=on --loader ts-node/esm aiTypes/convert.mts",
-		"start": "wrangler dev --local-protocol http --ip localhost --port 11853 --persist-to ../.wrangler/state"
+		"start": "wrangler dev --local-protocol http --ip localhost --persist-to ../.wrangler/state"
 	},
 	"repository": {
 		"type": "git",
