Add in metadata

--- a/pages/package.json
+++ b/pages/package.json
@@ -43,7 +43,8 @@
 		"@fortawesome/free-brands-svg-icons": "^6.5.1",
 		"@fortawesome/free-regular-svg-icons": "^6.5.1",
 		"@fortawesome/free-solid-svg-icons": "^6.5.1",
-		"flowbite": "^2.3.0"
+		"flowbite": "^2.3.0",
+		"meta-png": "^1.0.6"
 	},
 	"devDependencies": {
 		"@builder.io/qwik": "^1.4.5",
