--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -65,7 +65,7 @@
 	// Configure tool-specific properties.
 	"customizations": {
 		"vscode": {
-			"extensions": ["dbaeumer.vscode-eslint", "esbenp.prettier-vscode", "github.vscode-github-actions", "qwtel.sqlite-viewer", "unifiedjs.vscode-mdx", "redhat.vscode-yaml", "github.codespaces"]
+			"extensions": ["dbaeumer.vscode-eslint", "esbenp.prettier-vscode", "github.vscode-github-actions", "qwtel.sqlite-viewer", "unifiedjs.vscode-mdx", "redhat.vscode-yaml", "github.codespaces", "bradlc.vscode-tailwindcss"]
 		}
 	},
 
