--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -49,11 +49,20 @@ updates:
       - dependency-name: '@types/node'
         versions: '>=21.0.0'
     groups:
-      qwik:
+      cloudflare:
         patterns:
-          - '@builder.io/qwik'
-          - '@builder.io/qwik*'
-          - 'vite-*'
+          - '@cloudflare/*'
+          - 'wrangler'
+        exclude-patterns:
+          - '@cloudflare/workers-types'
+      code-management:
+        patterns:
+          - 'prettier'
+          - 'prettier-plugin-*'
+          - '@demosjarco/prettier-config'
+          - 'eslint'
+          - 'eslint-plugin-*'
+          - '@typescript-eslint/*'
       design:
         patterns:
           - 'tailwind*'
@@ -64,12 +73,11 @@ updates:
           - 'less'
           - '@fortawesome/*'
           - 'qwik-fontawesome'
-      cloudflare:
+      graphql:
         patterns:
-          - '@cloudflare/*'
-          - 'wrangler'
-        exclude-patterns:
-          - '@cloudflare/workers-types'
+          - 'graphql'
+          - 'graphql-*'
+          - '@graphql-yoga/*'
       typescript-core:
         patterns:
           - 'typescript'
@@ -80,11 +88,8 @@ updates:
           - '@types/*'
           - '@cloudflare/workers-types'
           - 'turnstile-types'
-      code-management:
+      qwik:
         patterns:
-          - 'prettier'
-          - 'prettier-plugin-*'
-          - '@demosjarco/prettier-config'
-          - 'eslint'
-          - 'eslint-plugin-*'
-          - '@typescript-eslint/*'
+          - '@builder.io/qwik'
+          - '@builder.io/qwik*'
+          - 'vite-*'
