--- a/pages/package.json
+++ b/pages/package.json
@@ -14,6 +14,7 @@
 		"dev": "vite --mode ssr",
 		"dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
 		"lint": "eslint \"src/**/*.ts*\"",
+		"lint:fix": "npm run lint -- --fix",
 		"preview": "qwik build preview && vite preview --open",
 		"preview:lhci": "qwik build preview && vite preview --port 8080",
 		"clean": "npx -y rimraf@latest ./dist ./server ./tmp",
