--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -50,6 +50,7 @@ jobs:
           cache: 'npm'
       - run: npm -w pages install -D eslint @typescript-eslint/eslint-plugin @typescript-eslint/parser eslint-plugin-qwik
       - run: npm -w pages run lint:fix
+        working-directory: pages
       - name: Check for Changes
         id: changes
         run: |
