--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -70,7 +70,8 @@ jobs:
       - run: git push
         if: steps.changes.outputs.changes == 'true'
       - run: npm install -D @microsoft/eslint-formatter-sarif
-      - run: npx eslint . --ext .js,.jsx,.ts,.tsx --format @microsoft/eslint-formatter-sarif --output-file eslint-results.sarif
+      - run: npx -w pages eslint . --ext .js,.jsx,.ts,.tsx --format @microsoft/eslint-formatter-sarif --output-file eslint-results.sarif
+        working-directory: pages
         continue-on-error: true
       - uses: github/codeql-action/upload-sarif@3ab4101902695724f9365a384f86c1074d94e18c # v3.24.7
         with:
