--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -75,5 +75,5 @@ jobs:
         continue-on-error: true
       - uses: github/codeql-action/upload-sarif@3ab4101902695724f9365a384f86c1074d94e18c # v3.24.7
         with:
-          sarif_file: eslint-results.sarif
+          sarif_file: pages/eslint-results.sarif
           wait-for-processing: true
