Make sure to not commit `package.json` files

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -65,7 +65,11 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-      - run: git commit -am "Ran eslint"
+      - run: git add
+        if: steps.changes.outputs.changes == 'true'
+      - run: git reset -- package*.json
+        if: steps.changes.outputs.changes == 'true'
+      - run: git commit -m "Ran eslint"
         if: steps.changes.outputs.changes == 'true'
       - run: git push
         if: steps.changes.outputs.changes == 'true'
