--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -65,7 +65,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-      - run: git add
+      - run: git add --all
         if: steps.changes.outputs.changes == 'true'
       - run: git reset -- package*.json
         if: steps.changes.outputs.changes == 'true'
