--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -74,8 +74,10 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
       - run: git commit -m "Ran eslint"
         if: steps.changes.outputs.changes == 'true'
+        continue-on-error: true
       - run: git push
         if: steps.changes.outputs.changes == 'true'
+        continue-on-error: true
       - run: npm install -D @microsoft/eslint-formatter-sarif
       - run: npx -w pages eslint . --ext .js,.jsx,.ts,.tsx --format @microsoft/eslint-formatter-sarif --output-file eslint-results.sarif
         working-directory: pages
