--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -77,6 +77,7 @@ jobs:
         continue-on-error: true
       - run: git push
         if: steps.changes.outputs.changes == 'true'
+        continue-on-error: true
       - run: npm install -D @microsoft/eslint-formatter-sarif
       - run: npx -w pages eslint . --ext .js,.jsx,.ts,.tsx --format @microsoft/eslint-formatter-sarif --output-file eslint-results.sarif
         working-directory: pages
