--- a/pages/package.json
+++ b/pages/package.json
@@ -41,16 +41,13 @@
 		"node": ">=18.0.0"
 	},
 	"dependencies": {
-		"@fortawesome/free-brands-svg-icons": "^6.5.1",
-		"@fortawesome/free-regular-svg-icons": "^6.5.1",
-		"@fortawesome/free-solid-svg-icons": "^6.5.1",
+		"@qwikest/icons": "^0.0.13",
 		"flowbite": "^2.3.0",
 		"meta-png": "^1.0.6"
 	},
 	"devDependencies": {
 		"@builder.io/qwik": "^1.5.1",
 		"@builder.io/qwik-city": "^1.5.1",
-		"@fortawesome/fontawesome-svg-core": "^6.5.1",
 		"@rollup/plugin-node-resolve": "^15.2.3",
 		"@types/eslint": "^8.56.6",
 		"@typescript-eslint/eslint-plugin": "^7.4.0",
@@ -63,7 +60,6 @@
 		"postcss-import": "^16.1.0",
 		"postcss-nesting": "^12.1.0",
 		"prettier-plugin-tailwindcss": "^0.5.13",
-		"qwik-fontawesome": "^0.2.0",
 		"tailwindcss": "^3.4.3",
 		"turnstile-types": "^1.2.0",
 		"vite-tsconfig-paths": "^4.3.2"
