--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,10 @@
 		{
 			"fileMatch": ["**/devcontainer.json"],
 			"url": "https://raw.githubusercontent.com/devcontainers/spec/main/schemas/devContainer.schema.json"
+		},
+		{
+			"fileMatch": ["wrangler.json*"],
+			"url": "https://github.com/cloudflare/workers-sdk/files/12887590/wrangler.schema.json"
 		}
 	]
 }
