--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,13 +13,14 @@
 			"sourceMaps": true
 		},
 		{
+			"name": "Wrangler",
 			"type": "node",
-			"name": "dev.debug",
-			"request": "launch",
-			"skipFiles": ["<node_internals>/**"],
+			"request": "attach",
+			"port": 9229,
 			"cwd": "${workspaceFolder}",
-			"program": "${workspaceFolder}/node_modules/vite/bin/vite.js",
-			"args": ["--mode", "ssr", "--force"]
+			"resolveSourceMapLocations": null,
+			"attachExistingChildren": false,
+			"autoAttachChildProcesses": false
 		}
 	]
 }
