--- a/pages/package.json
+++ b/pages/package.json
@@ -14,7 +14,7 @@
 		"lint:fix": "npm run lint -- --fix",
 		"preview": "qwik build preview && vite preview --open",
 		"preview:lhci": "qwik build preview && vite preview --port 8080",
-		"clean": "npx -y rimraf@latest ./dist ./server ./tmp",
+		"clean": "npx -y rimraf@latest --glob ./**/.wrangler ./dist ./server ./tmp",
 		"start": "wrangler pages dev dist --live-reload true --local-protocol http --ip localhost --port 11412 --compatibility-flags=\"nodejs_compat\" --persist-to ../.wrangler/state",
 		"serve": "wrangler pages dev ./dist",
 		"qwik": "qwik"
