--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -4,13 +4,10 @@ compatibility_date = "2024-03-20"
 compatibility_flags = ["nodejs_compat"]
 workers_dev = false
 minify = true
+ai = { binding = "AI" }
 
 [vars]
 NODE_ENV = "development"
-
-[ai]
-binding = "AI"
-
 
 [placement]
 mode = "smart"
@@ -21,12 +18,10 @@ compatibility_date = "2024-03-20"
 compatibility_flags = ["nodejs_compat"]
 workers_dev = false
 minify = true
+ai = { binding = "AI" }
 
 [env.staging.vars]
 NODE_ENV = "production"
-
-[env.staging.ai]
-binding = "AI"
 
 
 [env.production]
