Add `turnstile-types` to `tsconfig`

--- a/pages/tsconfig.json
+++ b/pages/tsconfig.json
@@ -9,7 +9,7 @@
 		"paths": {
 			"~/*": ["./src/*"],
 		},
-		"types": ["@cloudflare/workers-types/experimental", "vite/client"],
+		"types": ["@cloudflare/workers-types/experimental", "turnstile-types", "vite/client"],
 		"inlineSourceMap": true,
 		"outDir": "tmp",
 	},
