--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -1,7 +1,7 @@
 name = "mattai-worker-development"
 main = "src/index.ts"
-compatibility_flags = ["nodejs_compat"]
 compatibility_date = "2024-03-29"
+compatibility_flags = ["nodejs_compat", "brotli_content_encoding"]
 workers_dev = false
 minify = true
 ai = { binding = "AI" }
@@ -14,8 +14,8 @@ mode = "smart"
 
 [env.staging]
 name = "mattai-worker-staging"
-compatibility_flags = ["nodejs_compat"]
 compatibility_date = "2024-03-29"
+compatibility_flags = ["nodejs_compat", "brotli_content_encoding"]
 workers_dev = false
 minify = true
 ai = { binding = "AI" }
@@ -26,8 +26,8 @@ NODE_ENV = "production"
 
 [env.production]
 name = "mattai-worker"
-compatibility_flags = ["nodejs_compat"]
 compatibility_date = "2024-03-29"
+compatibility_flags = ["nodejs_compat", "brotli_content_encoding"]
 workers_dev = false
 minify = true
 
