--- a/.github/workflows/defender-for-devops.yml
+++ b/.github/workflows/defender-for-devops.yml
@@ -22,13 +22,11 @@ on:
   push:
     branches:
       - production
-      - staging
-      - dev
+      - preview
   pull_request:
     branches:
       - production
-      - staging
-      - dev
+      - preview
   schedule:
     - cron: '0 0 * * 0'
 
