--- a/.github/workflows/updateWorkersRuntime.yml
+++ b/.github/workflows/updateWorkersRuntime.yml
@@ -19,7 +19,7 @@ concurrency:
 
 jobs:
   update-toml:
-    if: startsWith(github.event.pull_request.head.ref, 'dependabot/npm_and_yarn/') && contains(github.event.pull_request.head.ref, '/cloudflare') && github.actor == 'dependabot[bot]'
+    if: startsWith(github.event.pull_request.head.ref, 'dependabot/npm_and_yarn/') && contains(github.event.pull_request.head.ref, '/cloudflare-') && github.actor == 'dependabot[bot]'
     runs-on: ubuntu-latest
     permissions:
       contents: write
