--- a/pages/wrangler.toml
+++ b/pages/wrangler.toml
@@ -1,11 +1,27 @@
-compatibility_flags = ["nodejs_compat"]
+name = "matt-ai"
+pages_build_output_dir = "pages/dist"
+compatibility_date = "2024-04-03"
+compatibility_flags = ["nodejs_compat", "brotli_content_encoding"]
 services = [
-    { binding = "BACKEND_WORKER", service = "mattai-worker-development" },
+    { binding = "BACKEND_WORKER", service = "mattai-worker-preview", environment = "production" },
 ]
 ai = { binding = "AI" }
 
 [vars]
 NODE_ENV = "development"
+
+
+[env.production]
+compatibility_date = "2024-04-03"
+compatibility_flags = ["nodejs_compat", "brotli_content_encoding"]
+services = [
+    { binding = "BACKEND_WORKER", service = "mattai-worker", environment = "production" },
+]
+ai = { binding = "AI" }
+
+[env.production.vars]
+NODE_ENV = "production"
+
 
 [dev]
 local_protocol = "http"
