--- a/worker/package.json
+++ b/worker/package.json
@@ -5,7 +5,7 @@
 		"build:types": "tsc --project aiTypes/tsconfig.json",
 		"build": "node --disallow-code-generation-from-strings --use-largepages=on --loader ts-node/esm aiTypes/convert.mts",
 		"clean": "npx -y rimraf@latest --glob ./**/.wrangler ./aiTypes/*.d.ts ./aiTypes/types.json",
-		"start": "wrangler dev --local-protocol http --ip localhost --persist-to ../.wrangler/state"
+		"start": "wrangler dev --persist-to ../.wrangler/state"
 	},
 	"repository": {
 		"type": "git",
