--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -1,4 +1,4 @@
-name = "mattai-worker-development"
+name = "mattai-worker-preview"
 main = "src/index.ts"
 compatibility_date = "2024-04-03"
 compatibility_flags = ["nodejs_compat", "brotli_content_encoding"]
@@ -12,17 +12,6 @@ NODE_ENV = "development"
 [placement]
 mode = "smart"
 
-[env.staging]
-name = "mattai-worker-staging"
-compatibility_date = "2024-04-03"
-compatibility_flags = ["nodejs_compat", "brotli_content_encoding"]
-workers_dev = false
-minify = true
-ai = { binding = "AI" }
-
-[env.staging.vars]
-NODE_ENV = "production"
-
 
 [env.production]
 name = "mattai-worker"
@@ -30,9 +19,16 @@ compatibility_date = "2024-04-03"
 compatibility_flags = ["nodejs_compat", "brotli_content_encoding"]
 workers_dev = false
 minify = true
+ai = { binding = "AI" }
 
 [env.production.vars]
 NODE_ENV = "production"
 
-[env.production.ai]
-binding = "AI"
+[env.production.placement]
+mode = "smart"
+
+
+[dev]
+local_protocol = "http"
+ip = "localhost"
+port = 11853
