Currently not supported by qwik

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -41,6 +41,9 @@ updates:
       # Match lts/*
       - dependency-name: '@types/node'
         versions: '>=21.0.0'
+      # Currently not supported by qwik
+      - dependency-name: 'eslint'
+        versions: '>=9.0.0'
     groups:
       cloudflare:
         patterns:
