Add ai types building

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"scripts": {
 		"fmt": "prettier --write .",
 		"fmt.check": "prettier --check .",
-		"build:pages": "npm ci --include-workspace-root --workspace pages --include dev && npm -w pages run build",
+		"build:pages": "npm ci --include-workspace-root --workspace pages --workspace worker --include dev && cd worker/aiTypes && npx tsc --project aiTypes/tsconfig.json && cd ../../ && npm -w worker run build && npm -w pages run build",
 		"clean": "npx -y rimraf@latest --glob ./**/.wrangler ./pages/dist ./pages/server ./pages/tmp ./worker/aiTypes/*.d.ts ./worker/aiTypes/types.json"
 	},
 	"repository": {
